<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:title="@string/pref_title_enable_mqtt"
        android:id="@+id/mqtt_switch"
        android:key="@string/key_setting_enable_mqtt"
        android:defaultValue="false" />
    <EditTextPreference
        android:defaultValue="@string/setting_mqtt_host_default"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="MQTT host"
        android:key="@string/key_setting_mqtt_host" />
    <EditTextPreference
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="MQTT topic"
        android:key="@string/key_setting_mqtt_topic"
        android:defaultValue="/homedash/" />
    <EditTextPreference
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_startup_url_title"
        android:key="@string/key_setting_startup_url"
        android:defaultValue="@string/setting_startup_url_default" />
    <SwitchPreference
        android:defaultValue="false"
        android:title="@string/setting_direct_browser_title"
        android:key="@string/key_setting_direct_browser_enable" />


</PreferenceScreen>
