<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="de.rhuber.homedash.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="de.rhuber.homedash.SettingsActivity$MqttPreferenceFragment"
        android:icon="@drawable/access_point_network"
        android:title="@string/pref_header_mqtt" />

    <header
        android:fragment="de.rhuber.homedash.SettingsActivity$SensorPreferenceFragment"
        android:icon="@drawable/ic_graphic_eq_black_24dp"
        android:title="@string/pref_header_sensors" />

    <header
        android:fragment="de.rhuber.homedash.SettingsActivity$AdvancedPreferenceFragment"
        android:icon="@drawable/ic_stars_black_24dp"
        android:title="@string/pref_header_advanced" />

</preference-headers>
